build: add factory_boy dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-filter = "^24.2"
 pylint = "^3.1.0"
 black = "^24.4.2"
 isort = "^5.13.2"
+factory-boy = "^3.3.0"
 
 [build-system]
 requires = ["poetry-core"]
