--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pylint = "^3.1.0"
 black = "^24.4.2"
 isort = "^5.13.2"
 factory-boy = "^3.3.0"
+pytest-django = "^4.8.0"
+pytest = "^8.2.2"
 
 [build-system]
 requires = ["poetry-core"]
