--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,21 @@ colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (sys_p
 dill==0.3.8 ; python_version >= "3.12" and python_version < "4.0"
 django-filter==24.2 ; python_version >= "3.12" and python_version < "4.0"
 django==5.0.4 ; python_version >= "3.12" and python_version < "4.0"
+factory-boy==3.3.0 ; python_version >= "3.12" and python_version < "4.0"
+faker==25.9.1 ; python_version >= "3.12" and python_version < "4.0"
+iniconfig==2.0.0 ; python_version >= "3.12" and python_version < "4.0"
 isort==5.13.2 ; python_version >= "3.12" and python_version < "4.0"
 mccabe==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 packaging==24.0 ; python_version >= "3.12" and python_version < "4.0"
 pathspec==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
 platformdirs==4.2.1 ; python_version >= "3.12" and python_version < "4.0"
+pluggy==1.5.0 ; python_version >= "3.12" and python_version < "4.0"
 pylint==3.1.0 ; python_version >= "3.12" and python_version < "4.0"
+pytest-django==4.8.0 ; python_version >= "3.12" and python_version < "4.0"
+pytest==8.2.2 ; python_version >= "3.12" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.12" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
 sqlparse==0.5.0 ; python_version >= "3.12" and python_version < "4.0"
 tomlkit==0.12.4 ; python_version >= "3.12" and python_version < "4.0"
 tzdata==2024.1 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "win32"
